--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,9 @@ small {
 
 .profile-photo {
 	width: 2.8rem;
+	height: 2.8rem;
+	border-radius: 50%;
+	overflow: hidden;
 }
 
 .text-muted {
@@ -375,3 +378,198 @@ main .recent-orders a {
 	color: var(--color-primary);
 }
 /* Main */
+
+.right {
+	margin-top: 1.4rem;
+}
+
+.right .top {
+	display: flex;
+	justify-content: end;
+	gap: 2rem;
+}
+
+.right .top button {
+	display: none;
+}
+
+.right .theme-toggler {
+	background: var(--color-light);
+	display: flex;
+	justify-content: space-between;
+	height: 1.6rem;
+	width: 4.2rem;
+	cursor: pointer;
+	border-radius: var(--border-radius-1);
+}
+
+.right .theme-toggler span {
+	font-size: 1.2rem;
+	width: 50%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.right .theme-toggler span.active {
+	background: var(--color-primary);
+	color: white;
+	border-radius: var(--border-radius-1);
+}
+
+.right .top .profile {
+	display: flex;
+	gap: 2rem;
+	text-align: right;
+}
+
+.right .recent-updates {
+	margin-top: 1rem;
+}
+
+.right .recent-updates h2 {
+	margin-top: 0.8rem;
+}
+
+.right .recent-updates .updates {
+	background: var(--color-white);
+	padding: var(--card-padding);
+	border-radius: var(--card-border-radius);
+	box-shadow: var(--box-shadown);
+	transition: all 300ms ease;
+}
+
+.right .recent-updates .updates:hover {
+	box-shadow: none;
+}
+
+.right .recent-updates .updates .update {
+	display: grid;
+	grid-template-columns: 2.6rem auto;
+	gap: 1rem;
+	margin-bottom: 1rem;
+}
+
+
+.right .sales-analitics {
+	margin-top: 2rem;
+}
+
+.right .sales-analitics h2 {
+	margin-bottom: 0.8rem;
+}
+
+.right .sales-analitics .item {
+	background: var(--color-white);
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+	margin-bottom: 0.7rem;
+	padding: 1.4rem var(--card-padding);
+	border-radius: var(--border-radius-3);
+	box-shadow: var(--box-shadown);
+	transition: all 300ms ease;
+}
+
+.right .sales-analitics .item:hover {
+	box-shadow: none;
+}
+
+.right .sales-analitics .item .right {
+	display: flex;
+	justify-content: space-between;
+	align-items: start;
+	margin: 0;
+	width: 100%;
+}
+
+.right .sales-analitics .item .icon {
+	padding: 0.6rem;
+	color: var(--color-white);
+	border-radius: 50%;
+	background: var(--color-primary);
+	display: flex;
+}
+
+.right .sales-analitics .item.offline .icon {
+	background: var(--color-danger);
+}
+
+.right .sales-analitics .item.customers .icon {
+	background: var(--color-success);
+}
+
+.right .sales-analitics .add-product {
+	background-color: transparent;
+	border: 2px dashed var(--color-primary);
+	color: var(--color-primary);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.right .sales-analitics .add-product div {
+	display: flex;
+	align-items: center;
+	gap: 0.6rem;
+}
+
+.right .sales-analitics .add-product div h3 {
+	font-weight: 600;
+}
+
+/* MEDIA QUERIES1 */
+@media screen and (max-width: 1200px) {
+	.container {
+		width: 94%;
+		grid-template-columns: 7rem auto 23rem;
+	}
+
+	aside .logo h2 {
+		display: none;
+	}
+
+	aside .sidebar h3 {
+		display: none;
+	}
+
+	aside .sidebar a {
+		width: 5.6rem;
+	}
+
+	aside .sidebar a:last-child {
+		position: relative;
+		margin-top: 1.8rem;
+	}
+
+	main .insights {
+		grid-template-columns: 1fr;
+	}
+
+	main .recent-orders {
+		width: 94;
+		position: absolute;
+		left: 50%;
+		transform: translateX(-50%);
+		margin: 2rem 0 0 8.8rem;
+	}
+
+	main .recent-orders table {
+		width: 83vw;
+	}
+
+	main table thead tr th:last-child,
+	main table thead tr th:first-child {
+		display: none;
+	}
+
+	main table tbody tr td:last-child,
+	main table tbody tr td:first-child {
+		display: none;
+	}
+}
+/* MEDIA QUERIES1 */
+
+/* MEDIA QUERIES2 */
+/* MEDIA QUERIES2 */
