--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,15 @@
 	--box-shadown: 0 2rem 3rem var(--color-light);
 }
 
+.dark-theme-variable {
+	--color-background: #181a1e;
+	--color-white: #202528;
+	--color-dark: #edeffd;
+	--color-dark-variant: #a3bdcc;
+	--color-light: rgba(0, 0, 0, 0.4);
+	--box-shadown: 0 2rem 3rem var(--color-light);
+}
+
 * {
 	margin: 0;
 	padding: 0;
@@ -132,7 +141,6 @@ aside {
 }
 
 aside .top {
-	background: white;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -509,6 +517,11 @@ main .recent-orders a {
 	justify-content: center;
 }
 
+.right .sales-analitics .add-product:hover {
+	background: var(--color-primary);
+	color: white;
+}
+
 .right .sales-analitics .add-product div {
 	display: flex;
 	align-items: center;
@@ -580,7 +593,7 @@ main .recent-orders a {
 
 	aside {
 		position: fixed;
-		left: 0;
+		left: -100%;
 		background: var(--color-white);
 		width: 18rem;
 		z-index: 3;
@@ -588,6 +601,13 @@ main .recent-orders a {
 		height: 100vh;
 		padding-right: var(--card-padding);
 		display: none;
+		animation: showMenu 400ms ease forwards;
+	}
+
+	@keyframes showMenu {
+		to {
+			left: 0;
+		}
 	}
 
 	aside .logo {
